--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,6 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-
     <dimen name="define_dimen_2">2dp</dimen>
     <dimen name="define_dimen_4">4dp</dimen>
     <dimen name="define_dimen_5">5dp</dimen>
@@ -33,7 +32,6 @@
     <dimen name="define_dimen_150">150dp</dimen>
     <dimen name="define_dimen_200">200dp</dimen>
     <dimen name="define_dimen_250">250dp</dimen>
-
     <!-- Text size -->
     <dimen name="text_size_xxtiny">4sp</dimen>
     <dimen name="text_size_xtiny">6sp</dimen>
@@ -50,4 +48,15 @@
     <dimen name="text_size_huge">28sp</dimen>
     <dimen name="text_size_xhuge">30sp</dimen>
     <dimen name="text_size_xxhuge">32sp</dimen>
+    <dimen name="header_height">50dp</dimen>
+    <dimen name="search_bar_height">60dp</dimen>
+    <dimen name="banner_height">200dp</dimen>
+    <dimen name="margin_medium">9dp</dimen>
+    <dimen name="app_name_text_size">20sp</dimen>
+    <dimen name="corner_radius">5dp</dimen>
+    
+        <dimen name="desired_width">450dp</dimen>
+        <dimen name="desired_height">300dp</dimen>
+    
+    <dimen name="text_size_medium">16sp</dimen>
 </resources>
