--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation" >
-    </androidx.viewpager2.widget.ViewPager2>
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_marginBottom="0dp"></androidx.viewpager2.widget.ViewPager2>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
