--- a/app/src/main/res/layout/fragment_library_.xml
+++ b/app/src/main/res/layout/fragment_library_.xml
@@ -213,6 +213,11 @@
             </TextView>
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewPlaylist1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp" />
     </LinearLayout>
 </ScrollView>
 
