--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,8 @@
         <item name="cornerSize">50%</item>
     </style>
     <style name="Theme.Music_App1" parent="Base.Theme.Music_App1" />
+    <style name="FullscreenDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowIsFloating">false</item>
+        <!-- Các thuộc tính khác nếu cần -->
+    </style>
 </resources>
