--- a/app/src/main/res/layout/fragment_download_.xml
+++ b/app/src/main/res/layout/fragment_download_.xml
@@ -7,7 +7,7 @@
     tools:context=".View.Download_Fragment"
     android:background="@drawable/custom_user">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_down"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
