--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -34,19 +34,13 @@
             android:textColor="@color/black"
             android:textSize="14sp" />
     </LinearLayout>
+
     <ImageButton
-        android:id="@+id/heart"
+        android:id="@+id/ellipsis"
         android:layout_weight="1"
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:src="@drawable/heart_regular"
-        android:background="@android:color/transparent"/>
-    <ImageButton
-        android:id="@+id/downmusic"
-        android:layout_weight="1"
-        android:layout_width="40dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/downloadsolid"
+        android:src="@drawable/ellipsis_solid"
         android:background="@android:color/transparent"
         android:layout_marginStart="10dp"/>
 </LinearLayout>
