--- a/app/src/main/res/drawable/circle_play_regular.xml
+++ b/app/src/main/res/drawable/circle_play_regular.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="50dp"
-    android:height="50dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M464,256A208,208 0,1 0,48 256a208,208 0,1 0,416 0zM0,256a256,256 0,1 1,512 0A256,256 0,1 1,0 256zM188.3,147.1c7.6,-4.2 16.8,-4.1 24.3,0.5l144,88c7.1,4.4 11.5,12.1 11.5,20.5s-4.4,16.1 -11.5,20.5l-144,88c-7.4,4.5 -16.7,4.7 -24.3,0.5s-12.3,-12.2 -12.3,-20.9V168c0,-8.7 4.7,-16.7 12.3,-20.9z"/>
+<vector android:height="60dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="60dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFFFF" android:pathData="M464,256A208,208 0,1 0,48 256a208,208 0,1 0,416 0zM0,256a256,256 0,1 1,512 0A256,256 0,1 1,0 256zM188.3,147.1c7.6,-4.2 16.8,-4.1 24.3,0.5l144,88c7.1,4.4 11.5,12.1 11.5,20.5s-4.4,16.1 -11.5,20.5l-144,88c-7.4,4.5 -16.7,4.7 -24.3,0.5s-12.3,-12.2 -12.3,-20.9V168c0,-8.7 4.7,-16.7 12.3,-20.9z"/>
 </vector>
