--- a/app/src/main/res/layout/fragment_play_music_.xml
+++ b/app/src/main/res/layout/fragment_play_music_.xml
@@ -74,7 +74,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="40dp">
 
         <com.example.music_app1.View.CircularImageView
             android:id="@+id/img_music"
@@ -94,7 +95,8 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:textColor="@color/white">
+            android:textColor="@color/white"
+            android:paddingTop="60dp">
         </TextView>
         <TextView
             android:id="@+id/name_artist"
@@ -109,13 +111,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginBottom="10dp">
+
 
         <SeekBar
             android:id="@+id/seekbar_music"
@@ -127,7 +123,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:layout_weight="1">
             <TextView
                 android:id="@+id/curentTime"
                 android:layout_width="wrap_content"
@@ -143,16 +140,34 @@
                 android:textColor="@color/white"/>
         </RelativeLayout>
 
-        <ImageButton
-            android:id="@+id/playpause"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Play"
-            android:src="@drawable/circle_play_regular"
-            android:background="@android:color/transparent"
-            app:backgroundTint="@null"
-            android:contentDescription="hinh anh"/>
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="100dp"
+            >
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/previousMusic"
+                android:src="@drawable/backward_step_solid"
+                android:background="@android:color/transparent"/>
+            <ImageButton
+                android:id="@+id/playpause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/circle_play_regular"
+                android:background="@android:color/transparent"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/nextMusic"
+                android:src="@drawable/forward_step_solid"
+                android:background="@android:color/transparent"/>
+        </LinearLayout>
 
 
-    </LinearLayout>
+
 </LinearLayout>
