--- a/app/src/main/res/layout/fragment_zingchat_.xml
+++ b/app/src/main/res/layout/fragment_zingchat_.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,45 +7,53 @@
     android:background="@drawable/custom_user"
     android:orientation="vertical"
     tools:context=".View.Library_Fragment">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
-            android:text="Bảng xếp hạng"
-            android:textSize="26sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-
-            android:id="@+id/search"
-            android:layout_width="82dp"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:contentDescription="timkiem"
-            android:padding="20dp"
-            android:src="@drawable/search" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_number_rank"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="20dp"
+                    android:text="Bảng xếp hạng"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+
+                    android:id="@+id/search"
+                    android:layout_width="82dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:contentDescription="timkiem"
+                    android:padding="20dp"
+                    android:src="@drawable/search" />
 
 
-    </LinearLayout>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_number_rank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+
+
+
+
+
+    </ScrollView>
+
 
 </LinearLayout>
