--- a/app/src/main/res/layout/bottomsheet_layout.xml
+++ b/app/src/main/res/layout/bottomsheet_layout.xml
@@ -21,6 +21,7 @@
         android:orientation="horizontal"
         android:padding="8dp">
         <ImageView
+            android:id="@+id/btndownmusic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/downloadsolid" />
