--- a/app/src/main/res/layout/fragment_zingchat_.xml
+++ b/app/src/main/res/layout/fragment_zingchat_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,44 +7,56 @@
     android:orientation="vertical"
     tools:context=".View.Library_Fragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
-            android:text="Bảng xếp hạng"
-            android:textSize="26sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-
-            android:id="@+id/search"
-            android:layout_width="82dp"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:contentDescription="timkiem"
-            android:padding="20dp"
-            android:src="@drawable/search" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_number_rank"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="20dp"
+                android:text="Bảng xếp hạng"
+                android:textSize="26sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/search"
+                android:layout_width="82dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:contentDescription="timkiem"
+                android:padding="20dp"
+                android:src="@drawable/search" />
 
-</LinearLayout>
+        </LinearLayout>
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph"
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
+            android:layout_marginTop="50dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/graph"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_number_rank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</androidx.core.widget.NestedScrollView>
