--- a/app/src/main/res/layout/fragment_library_.xml
+++ b/app/src/main/res/layout/fragment_library_.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:id="@+id/fragment_library"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/custom_user">
