--- a/app/src/main/res/drawable/custom_btn_google.xml
+++ b/app/src/main/res/drawable/custom_btn_google.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/coler_btn_phone" /> <!-- Màu nền của EditText -->
+    <solid android:color="@color/white" /> <!-- Màu nền của EditText -->
     <stroke
         android:width="2dp"
-        android:color="@color/coler_border_phone" />
+        android:color="@color/coler_gray_light" />
     <corners android:radius="16dp" /> <!-- Độ cong của góc -->
 </shape>
