--- a/app/src/main/res/drawable/custom_btn_login.xml
+++ b/app/src/main/res/drawable/custom_btn_login.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <solid android:color="@color/color_purple" />
+    <solid android:color="#800080" />
     <stroke
         android:width="1dp"
-        android:color="#ffffff" />
+        android:color="#4B0082" />
 </shape>
