--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -142,6 +142,17 @@
             android:text="Đăng nhập bằng số điện thoại"
             app:backgroundTint="@null" />
 
+        <Button
+            android:id="@+id/btn_google"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_btn_google"
+            android:drawableLeft="@drawable/ic_google"
+            android:text="Đăng nhập bằng Google"
+            android:textColor="@color/black"
+            app:backgroundTint="@null" />
+
 
     </LinearLayout>
 
