--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/custom_user"
     android:orientation="vertical"
-    tools:context=".Library_Fragment">
+    tools:context=".View.Library_Fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +57,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="20dp"
             android:src="@drawable/avatar_default"
-             />
+            />
 
         <Button
             android:id="@+id/btn_sign_out"
@@ -108,6 +108,7 @@
         android:textStyle="bold" />
 
     <LinearLayout
+        android:id="@+id/layoutUpdatePremium"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
