--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,11 +6,26 @@
     android:orientation="horizontal"
     android:padding="14dp">
 
-    <ImageView
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
 
-        android:id="@+id/img_music"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+            android:id="@+id/img_music"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <ImageView
+            android:id="@+id/icon_premium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/img_music"
+            android:layout_alignEnd="@id/img_music"
+            android:layout_marginTop="-24dp"
+            android:layout_marginEnd="0dp"
+            android:visibility="gone"
+            android:background="@drawable/baseline_diamond_24" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_weight="10"
