--- a/app/src/main/res/layout/item_zingchat.xml
+++ b/app/src/main/res/layout/item_zingchat.xml
@@ -19,11 +19,27 @@
         >
 
     </TextView>
-    <ImageView
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
 
-        android:id="@+id/img_music"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+            android:id="@+id/img_music"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <ImageView
+            android:id="@+id/icon_premium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/img_music"
+            android:layout_alignEnd="@id/img_music"
+            android:layout_marginTop="-24dp"
+            android:visibility="gone"
+            android:layout_marginEnd="0dp"
+
+            android:background="@drawable/baseline_diamond_24" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_weight="10"
