--- a/app/src/main/res/layout/fragment_explore_.xml
+++ b/app/src/main/res/layout/fragment_explore_.xml
@@ -35,10 +35,27 @@
 
     </LinearLayout>
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager_slide"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:layout_marginLeft="55dp">
+
+    <me.relex.circleindicator.CircleIndicator
+        android:id="@+id/circle_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp">
+
+    </me.relex.circleindicator.CircleIndicator>
+
+    </androidx.viewpager.widget.ViewPager>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_musics"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+       android:layout_marginTop="-75dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
