--- a/app/src/main/res/layout/dialog_playlist.xml
+++ b/app/src/main/res/layout/dialog_playlist.xml
@@ -5,7 +5,7 @@
     android:id="@+id/dialog_addplaylist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EACDCD"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".View.PlaylistDialogFragment">
 
