--- a/app/src/main/res/drawable/custom_bg.xml
+++ b/app/src/main/res/drawable/custom_bg.xml
@@ -1,7 +1,8 @@
 <!-- gradient_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-    android:startColor="#C94BFF"
-    android:endColor="#FF4774"
-    android:angle="45"/> <!-- Góc của gradient, trong đoạn mã này, gradient sẽ bắt đầu từ trên cùng bên trái và kết thúc ở dưới cùng bên phải -->
+        android:startColor="#8A2BE2"
+        android:centerColor="#FFC0CB"
+        android:endColor="#0000FF"
+        android:angle="45"/> <!-- Góc của gradient -->
 </shape>
