--- a/app/src/main/res/layout/fragment_my_profile_.xml
+++ b/app/src/main/res/layout/fragment_my_profile_.xml
@@ -35,6 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@drawable/custom_btn_login"
+
         android:text="Cập nhật"/>
 
 </LinearLayout>
