--- a/app/src/main/res/layout/fragment_library_.xml
+++ b/app/src/main/res/layout/fragment_library_.xml
@@ -6,7 +6,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/custom_user">
+    android:background="@drawable/custom_bg_fragment">
 
     <LinearLayout
         android:id="@+id/thuvien"
