--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
 
     <color name="color_button">#B236C8</color>
     <color name="colorTextHint">#504C4F</color>
+    <color name="light_blue">#6495ED</color>
 </resources>
